Colocar token bearer en suagger
